--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -23,10 +23,14 @@ on:
         description: "Window height"
         required: false
         default: "780"
+  push:
+    tags:
+      - 'v*'
+      - 'v*.*.*'
 
 jobs:
   build:
-    name: ${{ inputs.name }} (${{ matrix.os }})
+    name: Build (${{ matrix.os }})
     strategy:
       fail-fast: false
       matrix:
@@ -55,22 +59,31 @@ jobs:
       - name: Install pake-cli locally
         run: npm install pake-cli@latest
 
-      - name: Build app with pake-cli
+      - name: Initialize variables
         shell: bash
         env:
-          URL: ${{ inputs.url }}
-          NAME: ${{ inputs.name }}
-          ICON: ${{ inputs.icon }}
-          WIDTH: ${{ inputs.width }}
-          HEIGHT: ${{ inputs.height }}
+          INPUT_URL: ${{ inputs.url }}
+          INPUT_NAME: ${{ inputs.name }}
+          INPUT_ICON: ${{ inputs.icon }}
+          INPUT_WIDTH: ${{ inputs.width }}
+          INPUT_HEIGHT: ${{ inputs.height }}
         run: |
           set -euo pipefail
-          # Use npx to invoke local CLI (ensures correct PATH)
+          echo "URL=${INPUT_URL:-https://chat.maisonrmi.com}" >> "$GITHUB_ENV"
+          echo "NAME=${INPUT_NAME:-MaisonGPT}" >> "$GITHUB_ENV"
+          echo "ICON=${INPUT_ICON:-assets/icons/logo-1024-white.png}" >> "$GITHUB_ENV"
+          echo "WIDTH=${INPUT_WIDTH:-1200}" >> "$GITHUB_ENV"
+          echo "HEIGHT=${INPUT_HEIGHT:-780}" >> "$GITHUB_ENV"
+
+      - name: Build app with pake-cli
+        shell: bash
+        run: |
+          set -euo pipefail
           npx pake "$URL" --name "$NAME" --icon "$ICON" --width "$WIDTH" --height "$HEIGHT"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ inputs.name }}-${{ matrix.os }}
+          name: ${{ env.NAME }}-${{ matrix.os }}
           path: node_modules/pake-cli/output/*
           retention-days: 7
