--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -38,7 +38,7 @@ jobs:
           - os: macos-latest
             rust: stable
           - os: windows-latest
-            rust: stable-x86_64-msvc
+            rust: stable
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -46,9 +46,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
+          override: true
+          profile: minimal
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
