chore: version bump v0.0.4

--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -65,36 +65,9 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          node -e '\
-          const fs=require("fs"), path=require("path");\
-          function walk(dir){\
-            const out=[];\
-            for(const e of fs.readdirSync(dir,{withFileTypes:true})){\
-              const p=path.join(dir,e.name);\
-              if(e.isDirectory()) out.push(...walk(p)); else out.push(p);\
-            }\
-            return out;\
-          }\
-          const files=walk("node_modules/pake-cli");\
-          for(const f of files){\
-            if(f.endsWith("package.json")){\
-              try{\
-                const j=JSON.parse(fs.readFileSync(f,"utf8"));\
-                let changed=false;\
-                if(j.dependencies && j.dependencies["@tauri-apps/api"]){ j.dependencies["@tauri-apps/api"]="2.9.0"; changed=true; }\
-                if(j.devDependencies && j.devDependencies["@tauri-apps/api"]){ j.devDependencies["@tauri-apps/api"]="2.9.0"; changed=true; }\
-                if(changed){ fs.writeFileSync(f, JSON.stringify(j,null,2)); console.log("patched", f); }\
-              }catch(e){}\
-            }\
-            if(path.basename(f)==="Cargo.toml"){\
-              try{\
-                let s=fs.readFileSync(f,"utf8");\
-                s=s.replace(/(^\\s*tauri\\s*=\\s*\"[^\"]+\")/m, "tauri = \\\"2.9.0\\\" ");\
-                s=s.replace(/version\\s*=\\s*\"[^\"]+\"/g, "version = \\\"2.9.0\\\" ");\
-                fs.writeFileSync(f,s); console.log("patched", f);\
-              }catch(e){}\
-            }\
-          }'
+          # show the installed package to help debugging if it fails
+          ls -la node_modules/pake-cli || true
+          node .github/scripts/pin-tauri.js
           # Ensure tauri CLI is available at 2.9.0
           npm install @tauri-apps/cli@2.9.0
 
